--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,16 +31,20 @@
         </activity>
         <activity
             android:name=".activity.NumbersActivity"
-            android:label="@string/category_numbers" />
+            android:label="@string/category_numbers"
+            android:parentActivityName=".activity.MainActivity"/>
         <activity
             android:name=".activity.FamilyActivity"
-            android:label="@string/category_family" />
+            android:label="@string/category_family"
+            android:parentActivityName=".activity.MainActivity"/>
         <activity
             android:name=".activity.ColorsActivity"
-            android:label="@string/category_colors" />
+            android:label="@string/category_colors"
+            android:parentActivityName=".activity.MainActivity"/>
         <activity
             android:name=".activity.PhrasesActivity"
-            android:label="@string/category_phrases" />
+            android:label="@string/category_phrases"
+            android:parentActivityName=".activity.MainActivity"/>
     </application>
 
 </manifest>
